# Agentify-MedAgentBench

./: .gitignore  README.md  fhir_launcher.sh  fhir_mcp_launcher.sh  main.py  pyproject.toml  results.json  run.sh  sample.env
outputs/medagentbench/default_agent/medagentbench/: overall.json  overall_1.json  runs.jsonl  runs_1.jsonl
scenarios/medagentbench/: Dockerfile.medagentbench-agent  Dockerfile.medagentbench-evaluator  scenario.toml
scenarios/medagentbench/agent/src/: agent.py  server.py
scenarios/medagentbench/evaluator/src/: agent.py  executor.py  messenger.py  server.py
src/: __init__.py  medagent_launcher.py
src/agentbeats/: __init__.py  client.py  client_cli.py  cloudflare.py  models.py  run_scenario.py
src/green_agent/: __init__.py  medagent.py  medagent_green_agent.toml
src/green_agent/eval_resources/: eval.py  refsol.py  utils.py
src/mcp/: Dockerfile  __init__.py  server.py
src/mcp/resources/prompts/: system_prompt.txt
src/mcp/resources/tasks/: tasks.json
src/my_util/: __init__.py  logging_config.py  my_a2a.py
src/typings/: __init__.py  general.py  output.py  status.py
src/utils/: others.py
src/white_agent/: __init__.py  medagent.py
