[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "medagentbench"
version = "0.1.0"
description = "MedAgentBench evaluation framework for AgentBeats - evaluates medical AI agents on clinical reasoning tasks using FHIR resources"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk[http-server]>=0.3.20",
    "httpx>=0.28.1",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.38.0",
]

[project.optional-dependencies]
# Evaluator (green agent) dependencies
evaluator = [
    "requests>=2.31.0",
]
# Agent (purple agent) dependencies  
agent = [
    "litellm>=1.53.8",
    "mcp>=1.0.0",
]
# Full development setup (includes original launcher, MCP server, etc.)
dev = [
    "fastmcp>=2.0.0",
    "litellm>=1.53.8",
    "mcp>=1.0.0",
    "requests>=2.31.0",
    "typer>=0.19.2",
]

[project.scripts]
agentbeats-run = "agentbeats.run_scenario:main"

[tool.uv]
package = true
dev-dependencies = [
    "mypy>=1.18.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/agentbeats"]
